<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="0dp">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:elevation="6dp"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/backIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone"
                        android:contentDescription="@string/stockSearch"
                        android:src="@drawable/arrow_left" />

                    <TextView
                        android:id="@+id/titleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="false"
                        android:text="@string/Stocks"
                        android:textColor="#322D2D"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tickerTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/crossIcon"
                        android:layout_toEndOf="@id/backIcon"
                        android:paddingHorizontal="5dp"
                        android:textColor="#050505"
                        android:textSize="20sp"
                        android:visibility="gone" />


                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/crossIcon"
                        android:layout_toEndOf="@id/backIcon"
                        android:textColor="#050505"
                        android:visibility="gone">

                        <requestFocus />
                    </AutoCompleteTextView>



                    <ImageView
                        android:id="@+id/crossIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone"
                        android:contentDescription="@string/stockSearch"
                        android:src="@drawable/close" />

                    <ImageView
                        android:id="@+id/searchIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/stockSearch"
                        android:src="@drawable/search" />
                    <ImageView
                        android:id="@+id/starIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone"
                        android:contentDescription="@string/stockSearch"
                        android:src="@drawable/star_border" />


                </RelativeLayout>
            </LinearLayout>


        </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/homePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">
        <LinearLayout

            android:id="@+id/homePageContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="0dp">


        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:shadowColor="#9599A1"
            android:shadowDx="20"
            android:shadowDy="20"
            android:text="@string/c_date"
            android:textColor="#676464"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pf_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:paddingHorizontal="10dp"
            android:paddingVertical="7dp"
            android:text="@string/portfolio"
            android:textColor="#000000"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Net Worth"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/networth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$25000.00"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:text="Cash Balance"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/Balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:paddingHorizontal="10dp"
            android:paddingVertical="7dp"
            android:text="@string/favorites"
            android:textColor="#000000"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoritesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
        <TextView
            android:id="@+id/poweredByLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/finnhub"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>
</ScrollView>